feat: chest contents snapshot, fix storage screen bugs
Add ItemSnapshot and contentsSnapshot to ChestRecord for tracking
chest contents. Capture snapshot after every deposit/withdrawal.
Include contents in network JSON sent to client.

Fix Storage screen bugs:
- Bot selector clicks were consumed by header drag handler
- Collect command used wrong path (bot skill store -> bot store)
- Add tooltips to Collect and Dismiss buttons
- Convert ChestEntry from record to class for GSON compatibility

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>